# loans-specter-extension

./: MANIFEST.in  setup.cfg
src/b30wulffz/specterext/loans/: __main__.py  app_config.py  config.py  controller.py  service.py  tuesday: [.md
src/b30wulffz/specterext/loans/templates/loans/: base.jinja  error.jinja
src/b30wulffz/specterext/loans/templates/loans/customer/: active_loans.jinja  index.jinja  pending_request.jinja  settings.jinja
src/b30wulffz/specterext/loans/templates/loans/customer/components/: menu.jinja  tab.jinja
src/b30wulffz/specterext/loans/templates/loans/lender/: active_loans.jinja  index.jinja  pending_request.jinja
src/b30wulffz/specterext/loans/templates/loans/lender/components/: menu.jinja  tab.jinja
