[metadata]
name = b30wulffz_loans
version = 0.0.1
author = b30wulffz
author_email = shlokpandey123@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/b30wulffz/specterext-loans
project_urls =
    Bug Tracker = https://github.com/b30wulffz/specterext-loans/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=true
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src